--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <marquee behavior="alternate" scrollamount="30">
+    <marquee behavior="alternate" scrolLamount="30" direction="down">
     <div class="container">
       <div class="calc-text">
         <p name="user-input" id="user-input">0</p>
@@ -33,6 +35,7 @@
         <button type="button" class="key-operate operations">=</button>
       </div>
     </div>
+</marquee>
     <script type="text/javascript" src="javascript.js"></script>
   </body>
 </html>
